sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:16: error: '(' expected but identifier found.
    if trie==true return
       ^